<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eID Viewer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_usb">USB</string>
    <string name="photoDesc">eID Photo</string>
    <string name="name">Name</string>
    <string name="gNames">Given Names</string>
    <string name="birthPlace">Place of birth</string>
    <string name="birthDate">Date of birth</string>
    <string name="natNumber">National Number</string>
    <string name="nationality">Nationality</string>
    <string name="title">Title</string>
    <string name="specialStatus">Special Status</string>
    <string name="street">Street</string>
    <string name="zip">Postal code</string>
    <string name="municipality">Municipality</string>
    <string name="sex">Sex</string>
    <string name="cardnr">Card number</string>
    <string name="issuePlace">Place of issue</string>
    <string name="chipnr">Chip number</string>
    <string name="validFrom">Valid from</string>
    <string name="validTo">Valid until</string>
    <string name="usage">Usages</string>
    <string name="verifyPin">Verify PIN</string>
    <string name="verifyOCSP">check revocation status</string>
    <string name="identity">identity</string>
    <string name="card">card/pin</string>
    <string name="certificates">certificates</string>
    <string name="cardtype_citizen">IDENTITY CARD</string>
	<string name="cardtype_kids">KIDS CARD</string>
	<string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="status_whiteCane">white cane</string>
    <string name="status_yellowCane">yellow cane</string>
    <string name="status_extMinority">extended minority</string>
    <string name="usage_digitalSignature">digital signature</string>
    <string name="usage_nonRepudiation">non repudiation</string>
    <string name="usage_keyEncipherment">key encipherment</string>
    <string name="usage_dataEncipherment">data encipherment</string>
    <string name="usage_keyAgreement">key agreement</string>
    <string name="usage_keyCertSign">certificate signing</string>
    <string name="usage_cRLSign">CRL signing</string>
    <string name="usage_encipherOnly">encipher only</string>
    <string name="usage_decipherOnly">decipher only</string>
</resources>