<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity" >

        <TextView
            android:id="@+id/idType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:contentDescription="@string/photoDesc" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small"
                        android:gravity="right"
                        android:text="@string/name" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small"
                        android:gravity="right"
                        android:text="@string/gNames" />

                    <TextView
                        android:id="@+id/gNames"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small" />

                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small"
                        android:gravity="right"
                        android:text="@string/birthPlace" />

                    <TextView
                        android:id="@+id/birthPlace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small" />

                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small"
                        android:gravity="right"
                        android:text="@string/birthDate" />

                    <TextView
                        android:id="@+id/birthDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small" />

                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small"
                        android:gravity="right"
                        android:text="@string/sex" />

                    <TextView
                        android:id="@+id/sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small" />

                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small"
                        android:gravity="right"
                        android:text="@string/natNumber" />

                    <TextView
                        android:id="@+id/natNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small" />

                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small"
                        android:gravity="right"
                        android:text="@string/nationality" />

                    <TextView
                        android:id="@+id/nationality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small" />

                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small"
                        android:gravity="right"
                        android:text="@string/title" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small" />

                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_small"
                        android:gravity="right"
                        android:text="@string/specialStatus" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <CheckBox
                            android:clickable="false"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/status_whiteCane"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_whiteCane" />

                        <CheckBox
                            android:clickable="false"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/status_yellowCane"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_yellowCane" />

                        <CheckBox
                            android:clickable="false"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/status_extMinority"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_extMinority" />

                    </LinearLayout>

                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <TextView
			            android:layout_margin="@dimen/padding_small"
			            android:gravity="right"
			            android:text="@string/street" />

                    <TextView 
                        android:layout_margin="@dimen/padding_small"
                        android:id="@+id/street"/>

                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <TextView
			            android:layout_margin="@dimen/padding_small"
			            android:gravity="right"
			            android:text="@string/zip" />

                    <TextView 
                        android:layout_margin="@dimen/padding_small"
                        android:id="@+id/zip"/>

                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <TextView
			            android:layout_margin="@dimen/padding_small"
			            android:gravity="right"
			            android:text="@string/municipality" />

                    <TextView 
                        android:layout_margin="@dimen/padding_small"
                        android:id="@+id/municipality"/>

                </TableRow>
                
            </TableLayout>
        </LinearLayout>

</LinearLayout>
